// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should handle sizes correctly 1`] = `
<div>
  <div
    class="fd-dropdown grid"
  >
    <button
      aria-expanded="false"
      class="xs-12  fd-dropdown-button"
    >
      <span
        class="xs__mr+1"
      >
        Knopje
      </span>
      <span
        class="collapse-icon"
      >
        <test-file-stub />
      </span>
      <span
        class="expand-icon"
      >
        <test-file-stub />
      </span>
    </button>
    <nav
      class="fd-dropdown-items"
    >
      <ul>
        <li>
          <a
            href="https://fd.nl"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span>
              <span
                class="podcast-icon"
              >
                <test-file-stub />
              </span>
              <span>
                Spotify
              </span>
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://fd.nl"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span>
              <span
                class="podcast-icon"
              >
                <test-file-stub />
              </span>
              <span>
                Apple Podcasts
              </span>
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://fd.nl"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span>
              <span
                class="podcast-icon"
              >
                <test-file-stub />
              </span>
              <span>
                Google Podcasts
              </span>
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Dropdown should handle sizes correctly 2`] = `
<div>
  <div
    class="fd-dropdown grid"
  >
    <button
      aria-expanded="false"
      class="xs-12 m fd-dropdown-button"
    >
      <span
        class="xs__mr+1"
      >
        Knopje
      </span>
      <span
        class="collapse-icon"
      >
        <test-file-stub />
      </span>
      <span
        class="expand-icon"
      >
        <test-file-stub />
      </span>
    </button>
    <nav
      class="fd-dropdown-items"
    >
      <ul>
        <li>
          <a
            href="https://fd.nl"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span>
              <span
                class="podcast-icon"
              >
                <test-file-stub />
              </span>
              <span>
                Spotify
              </span>
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://fd.nl"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span>
              <span
                class="podcast-icon"
              >
                <test-file-stub />
              </span>
              <span>
                Apple Podcasts
              </span>
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://fd.nl"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span>
              <span
                class="podcast-icon"
              >
                <test-file-stub />
              </span>
              <span>
                Google Podcasts
              </span>
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
